# VisRecly

./: .gitmodules  .prettierignore  .prettierrc.js  .vercelignore  README.md  migrations.json  nx.json  package-lock.json  package.json  tailwind-workspace-preset.js  tsconfig.base.json  workspace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: build.md  ci.md  refactor.md  spike.md
apps/dashboard/: babel-plugin-macros.config.js  environment.d.ts  next.config.js  project.json  tailwind.config.js  tsconfig.json
apps/dashboard/hooks/: useIsomorphicLayoutEffect.tsx  useLocalStorage.tsx  useMuiAppBarHeight.tsx  useWindowSize.tsx
apps/dashboard/modules/layout/: LeftDrawerLayout.tsx
apps/dashboard/pages/: _app.tsx  _document.tsx  index.tsx
apps/dashboard/pages/test/: index.tsx
apps/dashboard/styles/: GlobalStyles.tsx  global.css  theme.ts
apps/rec-server/: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  project.json  pyproject.toml
apps/rec-server/src/rec_server/: __init__.py  main.py
apps/rec-server/tests/: test_rec_server.py
libs/data/: README.md  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/data/src/: index.ts
libs/data/src/lib/: data.ts  (+1 more)
libs/draco-web/: .eslintrc.json  README.md  jest.config.ts  package.json  project.json
libs/draco-web/src/: index.ts
libs/ranking/: README.md  jest.config.ts  package.json  project.json
libs/ranking/src/: index.ts
libs/types/: project.json
libs/vis-tasks/: README.md  jest.config.ts  package.json  project.json
libs/vis-tasks/src/: index.ts
(+109 files in other folders)
